--- a/config/packages/easy_admin.yaml
+++ b/config/packages/easy_admin.yaml
@@ -1,4 +1,12 @@
 easy_admin:
+    list:
+       actions:
+            - { name: 'edit', icon: 'pencil', label: 'Edit' }
+            - { name: 'delete', icon: 'trash', label: 'Delete' }
+    edit:
+       actions:           
+            - { name: 'delete', icon: 'trash', label: 'Delete' }
+            - { name: 'list', icon: 'list', label: 'Back to List' }
     site_name: 'LeagueMaker Administration.'              
     design:
         brand_color: 'red'
@@ -15,13 +23,22 @@ easy_admin:
             label: 'My Users'
             list:
                 title: "Most recent Users"
-                fields: ['Username', 'email']                    
+                fields: ['Username', 'email'] 
+            edit:
+                title: "Edit Page Users"
+                
+                #fields: ['Username', 'email', 'roles', 'password'] 
+            disabled_actions: ['new']                   
         Competition:
             class: App\Entity\Competition
             list:
                 title: "Most recent Competitions"
                 fields: ['name', 'creation date', 'location']
+            edit:
+                title: "Edit Page Competition"
         Tag:
             class: App\Entity\Tag
             list:
-                title: "Most recent Tags"  
+                title: "Most recent Tags" 
+            edit:
+                title: "Edit Page Tags" 
